# zentry

./: .gitignore  AGENTS.md  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/za/zentry/: MainActivity.kt
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/screens/: driving_mode_hud.dart  splash_screen.dart
app/lib/services/: solana_wallet_service.dart
app/lib/stitch/: identity_store.dart  intent_store.dart
app/lib/widgets/: audit_timeline.dart  pulsating_ai_orb.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/test/: widget_test.dart
programs/voice_policy/: Cargo.toml  Xargo.toml
programs/voice_policy/src/: lib.rs
programs/zentry/: Cargo.toml
programs/zentry/src/: lib.rs
tests/: voice_policy.ts  zentry.ts
