[package]
name = "zentry"
version = "0.1.0"
description = "Zentry Sentinel - Verifiable Intent Layer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zentry"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18"
