[package]
name = "zentry"
version = "0.1.0"
description = "Zentry Sentinel - Verifiable Intent Layer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zentry"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = []

[dependencies]
anchor-lang = "0.32.1"
